lab1/k8s/newsservice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newsservice
spec:
  type: ClusterIP      # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 80         # порт по якому можна звератись до сервісу
      targetPort: 8081 # порт контейнера
  selector:
    app: newsservice      # селектор, всі Pod з даним селектором, будуть підключені до даного сервісу
